--- a/requirements.txt
+++ b/requirements.txt
@@ -49,19 +49,19 @@ Pygments==2.18.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
-pywin32==306
+pip==24.2
 pyzmq==26.1.0
 referencing==0.35.1
 requests==2.32.3
 rich==13.7.1
 rpds-py==0.20.0
-scikit-learn==1.5.1
+scikit-learn==1.2.2
 scipy==1.14.0
 seaborn==0.13.2
 six==1.16.0
 smmap==5.0.1
 stack-data==0.6.3
-streamlit==1.37.1
+streamlit==1.24.0
 tenacity==8.5.0
 threadpoolctl==3.5.0
 toml==0.10.2
@@ -73,4 +73,4 @@ tzdata==2024.1
 urllib3==2.2.2
 watchdog==4.0.1
 wcwidth==0.2.13
-xgboost==2.1.1
+xgboost==1.6.1
